After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 599393 - Can't send anything to Balsa
Can't send anything to Balsa
Status: RESOLVED FIXED
Product: nautilus-sendto
Classification: Applications
Component: general
2.28.x
Other Linux
: Normal normal
: ---
Assigned To: nautilus-sendto-maint
nautilus-sendto-maint
Depends on:
Blocks:
 
 
Reported: 2009-10-23 10:52 UTC by Gabor Karsay
Modified: 2009-10-30 14:07 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch for Balsa syntax (1.07 KB, patch)
2009-10-23 10:52 UTC, Gabor Karsay
none Details | Review

Description Gabor Karsay 2009-10-23 10:52:40 UTC
Created attachment 146091 [details] [review]
Patch for Balsa syntax

If I try to send a file to Balsa, it fails every time.

This is for 2 reasons:
* Balsa creates a new mail either with option "-m" or option "--compose=", they
have the same meaning. The command set in "Preferred Applications" is, at least
at Ubuntu 9.04, "balsa -m". Nautilus-sendto appends "--compose=" which results
in a double "balsa -m --compose=" and that doesn't work.

* Double minus is missing in "--attach=".

For reference: http://linux.die.net/man/1/balsa
Comment 1 Bastien Nocera 2009-10-30 14:07:37 UTC
(In reply to comment #0)
> Created an attachment (id=146091) [details] [review]
> Patch for Balsa syntax
> 
> If I try to send a file to Balsa, it fails every time.
> 
> This is for 2 reasons:
> * Balsa creates a new mail either with option "-m" or option "--compose=", they
> have the same meaning. The command set in "Preferred Applications" is, at least
> at Ubuntu 9.04, "balsa -m". Nautilus-sendto appends "--compose=" which results
> in a double "balsa -m --compose=" and that doesn't work.

You should look for " -m " to avoid false positives, and the addition of "--compose" was missing a space before (so you'd end up running "balsa--compose=...")

> * Double minus is missing in "--attach=".

Fixed.

> For reference: http://linux.die.net/man/1/balsa

Thanks for the patch