Fix balsa command-line

Cater for the "--compose" flag already being added to the command-line
in default-applications.

Use --attach to add files, as mentioned on the command-line.

https://bugzilla.gnome.org/show_bug.cgi?id=599393